project: more project initialization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
-[package]
-name = "r-o-n"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
+[workspace]
+resolver = "2"
+members = [
+    "axum-server",
+]
